Added the dates of all the old relax releases.

--- a/download.html
+++ b/download.html
@@ -274,7 +274,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.3.5</em></td></tr>
+    <tr><td><em>Version 1.3.5 (2010-05-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>ed54f192648ff6ed81cb0488e5c5c101</small></tt></td>
@@ -306,7 +306,7 @@
       <td>5658255</td>
     </tr>
 
-    <tr><td><em>Version 1.3.4</em></td></tr>
+    <tr><td><em>Version 1.3.4 (2009-08-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>04d3fd17831fd924d112d56f42013782</small></tt></td>
@@ -338,7 +338,7 @@
       <td>5372921</td>
     </tr>
 
-    <tr><td><em>Version 1.3.3</em></td></tr>
+    <tr><td><em>Version 1.3.3 (2008-11-29)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>999f4f161f6d814d60aae0e6f97fd55e</small></tt></td>
@@ -370,7 +370,7 @@
       <td>5183341</td>
     </tr>
 
-    <tr><td><em>Version 1.3.2</em></td></tr>
+    <tr><td><em>Version 1.3.2 (2008-10-08)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
@@ -403,7 +403,7 @@
     </tr>
 
 
-    <tr><td><em>Version 1.3.1</em></td></tr>
+    <tr><td><em>Version 1.3.1 (2008-09-28)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
@@ -435,7 +435,7 @@
       <td>5098404</td>
     </tr>
 
-    <tr><td><em>Version 1.3.0</em></td></tr>
+    <tr><td><em>Version 1.3.0 (2007-02-19)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
@@ -475,7 +475,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.2.15</em></td></tr>
+    <tr><td><em>Version 1.2.15 (2008-11-27)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
@@ -507,7 +507,7 @@
       <td>4599482</td>
     </tr>
 
-    <tr><td><em>Version 1.2.14</em></td></tr>
+    <tr><td><em>Version 1.2.14 (2008-08-09)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
@@ -539,7 +539,7 @@
       <td>4597884</td>
     </tr>
 
-    <tr><td><em>Version 1.2.13</em></td></tr>
+    <tr><td><em>Version 1.2.13 (2008-04-19)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>97a1608e5a37a88e41eb590f97f0c670</small></tt></td>
@@ -571,7 +571,7 @@
       <td>4564801</td>
     </tr>
 
-    <tr><td><em>Version 1.2.12</em></td></tr>
+    <tr><td><em>Version 1.2.12 (2007-11-17)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
@@ -597,7 +597,7 @@
       <td>4537636</td>
     </tr>
 
-    <tr><td><em>Version 1.2.11</em></td></tr>
+    <tr><td><em>Version 1.2.11 (2007-10-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>87fc5dbebc87911393d124fb36c9e52f</small></tt></td>
@@ -629,7 +629,7 @@
       <td>4543086</td>
     </tr>
 
-    <tr><td><em>Version 1.2.10</em></td></tr>
+    <tr><td><em>Version 1.2.10 (2007-01-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
@@ -655,7 +655,7 @@
       <td>4529561</td>
     </tr>
 
-    <tr><td><em>Version 1.2.9</em></td></tr>
+    <tr><td><em>Version 1.2.9 (2006-11-09)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f719cc0a9fd8b710e28d1c2a5d597aa7</small></tt></td>
@@ -681,7 +681,7 @@
       <td>3838688</td>
     </tr>
 
-    <tr><td><em>Version 1.2.8</em></td></tr>
+    <tr><td><em>Version 1.2.8 (2006-11-04)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.8.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.8.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f9b374a51ebc67e5d0fb4880c55c7178</small></tt></td>
@@ -707,7 +707,7 @@
       <td>3838480</td>
     </tr>
 
-    <tr><td><em>Version 1.2.7</em></td></tr>
+    <tr><td><em>Version 1.2.7 (2006-09-18)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.7.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.7.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>d6ebbdcad1bd74c6996da8f71f2e3c3d</small></tt></td>
@@ -733,7 +733,7 @@
       <td>3777870</td>
     </tr>
 
-    <tr><td><em>Version 1.2.6</em></td></tr>
+    <tr><td><em>Version 1.2.6 (2006-07-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.6.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.6.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>b76909907498fcf35808bfe283b8b0be</small></tt></td>
@@ -747,7 +747,7 @@
       <td>3569737</td>
     </tr>
 
-    <tr><td><em>Version 1.2.5</em></td></tr>
+    <tr><td><em>Version 1.2.5 (2006-07-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.5.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>6b71bef84131920fc750c9adda06496f</small></tt></td>
@@ -761,7 +761,7 @@
       <td>3568111</td>
     </tr>
 
-    <tr><td><em>Version 1.2.4</em></td></tr>
+    <tr><td><em>Version 1.2.4 (2006-05-02)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>af8525cd14611f11392f3fe1846540f4</small></tt></td>
@@ -775,7 +775,7 @@
       <td>1956355</td>
     </tr>
 
-    <tr><td><em>Version 1.2.3</em></td></tr>
+    <tr><td><em>Version 1.2.3 (2006-03-02)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.3.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f1d1ebee86b8cb1ab8674e56ae1a7c4b</small></tt></td>
@@ -789,7 +789,7 @@
       <td>1634574</td>
     </tr>
 
-    <tr><td><em>Version 1.2.2</em></td></tr>
+    <tr><td><em>Version 1.2.2 (2006-02-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.2.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>220e1cc6d434fd944e4053539e6a016c</small></tt></td>
@@ -803,7 +803,7 @@
       <td>1771018</td>
     </tr>
 
-    <tr><td><em>Version 1.2.1</em></td></tr>
+    <tr><td><em>Version 1.2.1 (2006-01-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>3a1ebc7cff791e549634d2f731d306f0</small></tt></td>
@@ -817,7 +817,7 @@
       <td>1607384</td>
     </tr>
 
-    <tr><td><em>Version 1.2.0</em></td></tr>
+    <tr><td><em>Version 1.2.0 (2006-01-14)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>3227641fc48afddc1156e3aba0719a1b</small></tt></td>
@@ -845,7 +845,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.0.10</em></td></tr>
+    <tr><td><em>Version 1.0.10 (2006-01-14)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.10.tar.bz2" title="relax">relax-1.0.10.tar.bz2</a></td>
       <td><tt><small>3542fde96bd06190f3b99f40e56e31c4</small></tt></td>
@@ -853,7 +853,7 @@
       <td>1629102</td>
     </tr>
 
-    <tr><td><em>Version 1.0.9</em></td></tr>
+    <tr><td><em>Version 1.0.9 (2005-12-15)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.9.tar.bz2" title="relax">relax-1.0.9.tar.bz2</a></td>
       <td><tt><small>a31d96710c64c40a9df1b392f7bb7fae</small></tt></td>
@@ -861,7 +861,7 @@
       <td>1628919</td>
     </tr>
 
-    <tr><td><em>Version 1.0.8</em></td></tr>
+    <tr><td><em>Version 1.0.8 (2005-12-13)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.8.tar.bz2" title="relax">relax-1.0.8.tar.bz2</a></td>
       <td><tt><small>ebc56c99b3105b62f62cfc9c0d25b4d6</small></tt></td>
@@ -869,7 +869,7 @@
       <td>1627635</td>
     </tr>
 
-    <tr><td><em>Version 1.0.7</em></td></tr>
+    <tr><td><em>Version 1.0.7 (2005-12-04)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.7.tar.bz2" title="relax">relax-1.0.7.tar.bz2</a></td>
       <td><tt><small>6e13c777bc6e343eb1a96ccd6db8cc88</small></tt></td>
@@ -877,7 +877,7 @@
       <td>1618929</td>
     </tr>
 
-    <tr><td><em>Version 1.0.6</em></td></tr>
+    <tr><td><em>Version 1.0.6 (2005-12-04)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.6.tar.bz2" title="relax">relax-1.0.6.tar.bz2</a></td>
       <td><tt><small>42a0799a50e3202fc9ba706c4987525a</small></tt></td>
@@ -885,7 +885,7 @@
       <td>1625250</td>
     </tr>
 
-    <tr><td><em>Version 1.0.5</em></td></tr>
+    <tr><td><em>Version 1.0.5 (2005-11-28)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.5.tar.bz2" title="relax">relax-1.0.5.tar.bz2</a></td>
       <td><tt><small>9884e0642aa6e45f3a97f0c9116df43e</small></tt></td>
@@ -893,7 +893,7 @@
       <td>1614901</td>
     </tr>
 
-    <tr><td><em>Version 1.0.4</em></td></tr>
+    <tr><td><em>Version 1.0.4 (2005-11-28)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.4.tar.bz2" title="relax">relax-1.0.4.tar.bz2</a></td>
       <td><tt><small>3bb98541cf86e5bf59b91bc9344f76d2</small></tt></td>
@@ -901,7 +901,7 @@
       <td>1625766</td>
     </tr>
 
-    <tr><td><em>Version 1.0.3</em></td></tr>
+    <tr><td><em>Version 1.0.3 (2005-11-08)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.3.tar.bz2" title="relax">relax-1.0.3.tar.bz2</a></td>
       <td><tt><small>19c27bf042d3e57f5f46d2a032b8c1d7</small></tt></td>
@@ -909,7 +909,7 @@
       <td>1595771</td>
     </tr>
 
-    <tr><td><em>Version 1.0.2</em></td></tr>
+    <tr><td><em>Version 1.0.2 (2005-11-06)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.2.tar.bz2" title="relax">relax-1.0.2.tar.bz2</a></td>
       <td><tt><small>9ac330ca9e45da144861e2b977a15965</small></tt></td>
@@ -917,7 +917,7 @@
       <td>1596185</td>
     </tr>
 
-    <tr><td><em>Version 1.0.1</em></td></tr>
+    <tr><td><em>Version 1.0.1 (2005-10-31)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.1.tar.bz2" title="relax">relax-1.0.1.tar.bz2</a></td>
       <td><tt><small>d3ac2d9de88b50a28dcac70115ce258a</small></tt></td>
@@ -925,7 +925,7 @@
       <td>1579897</td>
     </tr>
 
-    <tr><td><em>Version 1.0.0</em></td></tr>
+    <tr><td><em>Version 1.0.0 (2005-06-25)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.0.tar.bz2" title="relax">relax-1.0.0.tar.bz2</a></td>
       <td><tt><small>32a9c4a661559f7ba3ef1029ef75ecdd</small></tt></td>
