Updated http://nmr-relax.com for relax version 1.3.6.

--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current stable release is relax version 1.3.5.</p>
+      <p>The current stable release is relax version 1.3.6.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -101,10 +101,10 @@
       <td>4937315</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>1fd2ff25cebd744a051e19e954d62db6</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>5038283</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.6.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>00f93a895d1d32ced97ba9907ba6658f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>6412215</td>
     </tr>
     </tr>
   </tbody>
@@ -136,10 +136,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip" title="relax">relax-1.3.5.Win32.zip</a></td>
-      <td><tt><small>fc029f10dd519d8cc43e3b4bcdf86b44</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5637951</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.Win32.zip" title="relax">relax-1.3.6.Win32.zip</a></td>
+      <td><tt><small>821f24a2747a74bc1c4d523e8f2635a6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>7075815</td>
     </tr>
   </tbody>
 </table>
@@ -198,16 +198,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2" title="relax">relax-1.3.5.src.tar.bz2</a></td>
-      <td><tt><small>053768221f43e858ec07b8bb4ba30343</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>5028247</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.tar.bz2" title="relax">relax-1.3.6.src.tar.bz2</a></td>
+      <td><tt><small>e515856a4255a832f7a0314f2e0509f3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>6406352</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip" title="relax">relax-1.3.5.src.zip</a></td>
-      <td><tt><small>434aa16ef268088698116260c819762e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5658255</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.zip" title="relax">relax-1.3.6.src.zip</a></td>
+      <td><tt><small>aa69a03d6f86c769281168a5b9047716</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>7097715</td>
     </tr>
   </tbody>
 </table>
@@ -272,6 +272,32 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.6 (2010-12-31)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.6.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>00f93a895d1d32ced97ba9907ba6658f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>6412215</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.Win32.zip" title="relax">relax-1.3.6.Win32.zip</a></td>
+      <td><tt><small>821f24a2747a74bc1c4d523e8f2635a6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>7075815</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.tar.bz2" title="relax">relax-1.3.6.src.tar.bz2</a></td>
+      <td><tt><small>e515856a4255a832f7a0314f2e0509f3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>6406352</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.zip" title="relax">relax-1.3.6.src.zip</a></td>
+      <td><tt><small>aa69a03d6f86c769281168a5b9047716</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.6.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>7097715</td>
     </tr>
 
     <tr><td><em>Version 1.3.5 (2010-05-21)</em></td></tr>
