Added a section explaining the relax dependencies to the http://www.nmr-relax.com/download.html page.

--- a/download.html
+++ b/download.html
@@ -76,6 +76,19 @@
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
+
+      <h3>Dependencies</h3>
+
+      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> (Numerical Python) need to be installed on the system for relax to run.  A few other Python packages are optional and relax will function perfectly well without these, although certain features may be missing.</p>
+
+      <h4>Scientific python</h4>
+
+      <p>relax has an inbuilt PDB reader.  However, due to the diversity of the PDB with many files not conforming to the standard, this reader many not function for all files.  An alternative is to use the more advanced PDB reader that comes with <a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a>.</p>
+
+      <h4>SciPy</h4>
+
+      <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
+
     </div>
 
 
