Added a line about extra package dependencies to http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -79,7 +79,7 @@
 
       <h3>Dependencies</h3>
 
-      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> (Numerical Python) need to be installed on the system for relax to run.  A few other Python packages are optional and relax will function perfectly well without these, although certain features may be missing.</p>
+      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> (Numerical Python) need to be installed on the system for relax to run.  A few other Python packages are optional and relax will function perfectly well without these, although certain features may be missing.  Additional Python packages may be required on certain platforms.</p>
 
       <h4>Scientific python</h4>
 
