--- a/download.html
+++ b/download.html
@@ -127,7 +127,7 @@
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.2/Python-2.6.2.tar.bz2">Python-2.6.2.tar.bz2</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">NumPy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
@@ -161,7 +161,7 @@
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2.msi">python-2.6.2.msi</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">NumPy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
@@ -190,7 +190,7 @@
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2-macosx2009-04-16.dmg">python-2.6.2-macosx2009-04-16.dmg</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">NumPy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
@@ -232,7 +232,7 @@
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.2/">Python 2.6.2 release page</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">NumPy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
