Added some info about needing numpy headers to compile on http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -242,7 +242,7 @@
 
           <p><em>> scons</em></p>
 
-          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSCV_probs">here</a>.</p>
+          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The NumPy header files also need to be installed.  On some platforms these files are distributed separately as numpy-devel, python-numpy-devel, etc.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSCV_probs">here</a>.</p>
 
          <h3>Development platforms</h3>
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a>, for compiling the LaTeX manual, and generating relax distribution packages.</p>
