Fixed the link for the relax news page at http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -278,7 +278,7 @@
   <div class="main_box">
     <h1>All releases</h1>
 
-      <p>Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
+      <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
       <h2>The 1.3 line</h2>
 
