Updated the reference list at http://www.nmr-relax.com/refs.html to include "Consistency testing".

--- a/refs.html
+++ b/refs.html
@@ -115,6 +115,11 @@
      <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
     </ul>
 
+   <h2>Consistency testing in relax</h2>
+    <ul class="ref_ul">
+     <li class="ref_li" id="Morin09"> Morin, S. and Gagné, S. M. (2009). Simple tests for the validation of multiple ﬁeld spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
+    </ul>
+
    <h2>Misc.</h2>
     <ul class="ref_ul">
      <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
