Change an accent for a special HTML character in http://www.nmr-relax.com/refs.html and http://www.nmr-relax.com/features.html.
This was pointed by Edward in a post at:
https://mail.gna.org/public/relax-devel/2011-01/msg00021.html
(Message-id: <AANLkTinLpE7RW2K2Rh_sSxVgS-jN4scZjQW6bWP7pUNe@mail.gmail.com>)

--- a/features.html
+++ b/features.html
@@ -110,7 +110,7 @@
       </ul></li>
      <li>Monte Carlo simulations (error analysis for all data analysis techniques)</li>
      <li>Model elimination - the removal of failed models prior to model selection (<a href="refs.html#dAuvergneGooley06">d'Auvergne and Gooley, 2006</a>)</li>
-     <li>Consistency testing - the validation of multiple field relaxation data (<a href="refs.html#Morin09">Morin and Gagné, 2009</a>)</li>
+     <li>Consistency testing - the validation of multiple field relaxation data (<a href="refs.html#Morin09">Morin and GagnÃ©, 2009</a>)</li>
     </ul>
 
   </div>
