--- a/refs.html
+++ b/refs.html
@@ -117,7 +117,7 @@
 
    <h2>Consistency testing in relax</h2>
     <ul class="ref_ul">
-     <li class="ref_li" id="Morin09"> Morin, S. and Gagné, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
+     <li class="ref_li" id="Morin09"> Morin, S. and GagnÃ©, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
     </ul>
 
    <h2>Misc.</h2>
