Started to modify the events page (http://www.nmr-relax.com/events.html).
This follows a thread started at:
https://mail.gna.org/public/relax-devel/2011-01/msg00018.html
(Message-id: <4D2C8D60.9050300@ulaval.ca>)

--- a/events.html
+++ b/events.html
@@ -13,8 +13,8 @@
 -->
 
 <head>
-  <title>Documentation</title>
-  <meta name="AUTHOR" content="Edward d'Auvergne"/>
+  <title>Events</title>
+  <meta name="AUTHOR" content="Edward d'Auvergne and S&eacute;bastien Morin"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link rel="stylesheet" type="text/css" href="relax.css"/>
 </head>
@@ -39,6 +39,7 @@
     <li class="menu_def"><a href="docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
     <li class="menu_def"><a href="communication.html" title="The bug tracker and mailing lists">Communication</a></li>
+    <li class="menu_def"><a href="events.html" title="The material related to events publicizing relax">Events</a></li>
     <li class="menu_def"><a href="refs.html" title="References for relax">References</a></li>
     <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
 
@@ -62,83 +63,21 @@
 
 <div class="main">
   <div class="main_box">
-  <h1>Documentation</h1>
+  <h1>Events</h1>
 
   <div class="main_h2">
-    <h2>The internal help system</h2>
+    <h2>Posters</h2>
 
-      <p>To learn how to use the program relax, there are three major approaches which can be taken.  The first is the internal help system within relax.  From the command line type <em>'relax'</em> to start the program, you will then be presented with the prompt:</p>
-
-      <p><em>relax></em></p>
-
-      <p>The help system consists of using tab completion to return a listing of all available functions together with the help function which presents a description of these functions.  For instance, to receive help for the function <em>'minimise'</em>, type:</p>
-
-      <p><em>relax> help(minimise)</em></p>
-
-      <p>The information returned should be sufficient for understanding all options of that function.</p>
-  </div>
-
-  <div class="main_h2">
-    <h2>Sample scripts</h2>
-
-      <p>The easiest way of starting to use relax is by copying the sample scripts from the directory <em>'sample_scripts'</em> found within the base directory of the relax installation, and to modify it to suit the protein being studied.  Many scripts can be found which implement various aspects of model-free data analysis.</p>
-  </div>
-
-  <div class="main_h2">
-    <h2>The manual</h2>
-
-    <p>Finally, the best source of information is the current version of the the relax manual which comes with relax.  These can be download from here</p>
+    <p>Here is a list of events where relax was presented.</p>
 
     <ul class="main_ul">
-      <li><a href="http://download.gna.org/relax/manual/1.3/relax.pdf">PDF manual for relax version 1.3.x.</a></li>
-      <li><a href="http://download.gna.org/relax/manual/1.2/relax.pdf">PDF manual for relax version 1.2.x.</a></li>
+      <li><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract of the poster presented at the 2009 ENC in Asilomar (CA, USA).</a></li>
+      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster presented at the 2009 ENC in Asilomar (CA, USA).</a></li>
+      <li><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster presented at the 2009 MOOT in Ottawa (ON, Canada).</a></li>
     </ul>
 
-    <p>The manual has also been converted into a HTML version which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.</p>
-
-    <ul class="main_ul">
-      <li><a href="manual/1.3/relax.html">HTML manual for relax version 1.3.x.</a></li>
-      <li><a href="manual/1.2/relax.html">HTML manual for relax version 1.2.x.</a></li>
-    </ul>
-
-    <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
-
-    <!-- SiteSearch Google -->
-    <form method="get" action="http://www.google.com/search">
-    <table style="background-color:#ffffff">
-    <tr>
-      <td>
-        <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" style="border:0" alt="Google"/></a>
-      </td>
-      <td style="font-size:80%">
-        <input type="text" name="q" size="31" maxlength="255" value=""/>
-        <input type="submit" name="btnG" value="Google Search"/>
-        <input type="hidden" name="domains" value="http://nmr-relax.com"/>
-          <br />
-          <input type="radio" name="sitesearch" value=""/> WWW
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked="checked"/> relax 1.2 HTML manual
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"/> relax 1.3 HTML manual
-      </td>
-    </tr>
-    </table>
-    </form>
-    <!-- SiteSearch Google -->
   </div>
-  <div class="main_h2">
-    <h2>The mailing list archives</h2>
-
-      <p>Another source of information is the relax mailing list archives.  The mailing lists are described on the <a href='communication.html'>communication</a> page.  These archives can also be <a href='communication.html#mailing_list_search'>searched</a>.</p>
   </div>
-
-  </div>
-</div>
-
-<div class="clear"></div>
-
-<div class="footer">
- <div class="footer_left">This text is available under the terms of the <a href="fdl.html">GNU Free Documentation License</a>.</div>
- <div class="footer_right">Hosted by <a href="http://gna.org/">Gna!</a></div>
- <div class="clear"></div>
 </div>
 
 </body>
