Added some 'main_h2' div boxes to better separate the sections of the reference page.
The page is http://www.nmr-relax.com/refs.html.

--- a/refs.html
+++ b/refs.html
@@ -64,14 +64,18 @@
 <div class="main">
  <div class="main_box">
   <h1>References</h1>
+
+  <div class="main_h2" id="relax">
    <h2>The program relax</h2>
     <ul class="ref_ul">
      <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
 
      <li class="ref_li" id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
     </ul>
+  </div>
 
 
+  <div class="main_h2" id="model_free">
    <h2>Model-free analysis in relax</h2>
 
    <p>For a model-free analysis using relax, all of the following should be cited!</p>
@@ -115,12 +119,16 @@
     <ul class="ref_ul">
      <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
     </ul>
+  </div>
 
+  <div class="main_h2" id="consistency testing">
    <h2>Consistency testing in relax</h2>
     <ul class="ref_ul">
      <li class="ref_li" id="Morin09"> Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
     </ul>
+  </div>
 
+  <div class="main_h2" id="misc">
    <h2>Misc.</h2>
     <ul class="ref_ul">
      <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
@@ -135,6 +143,7 @@
 
      <li class="ref_li" id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001).  A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
     </ul>
+  </div>
 
  </div>
 </div>
