Improved the events page (http://www.nmr-relax.com/events.html) by dividing the events with 'h3' titles.
This follows a thread started at:
https://mail.gna.org/public/relax-devel/2011-01/msg00018.html
(Message-id: <4D2C8D60.9050300@ulaval.ca>)

--- a/events.html
+++ b/events.html
@@ -70,12 +70,21 @@
 
     <p>Here is a list of events where relax was presented.</p>
 
-    <ul class="main_ul">
-      <li><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract of the poster presented at the 2009 ENC in Asilomar (CA, USA).</a></li>
-      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster presented at the 2009 ENC in Asilomar (CA, USA).</a></li>
-      <li><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster presented at the 2009 MOOT in Ottawa (ON, Canada).</a></li>
+  <div class="main_h3">
+    <h3>2009 - 50th Experimental Nuclear Magnetic Resonance Conference (Asilomar, CA, USA)</h3>
+
+    <ul>
+      <li><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></li>
+      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></li>
     </ul>
 
+    <h3>2009 - 22nd MOOT (Ottawa, ON, Canada)</h3>
+
+    <ul>
+      <li><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></li>
+    </ul>
+
+  </div>
   </div>
   </div>
 </div>
