Added a disclaimer for the re-use of events documents (posters, lectures, etc) in http://www.nmr-relax.com/events.html.
This follows a post at:
https://mail.gna.org/public/relax-devel/2011-01/msg00030.html
(Message-id: <AANLkTim7yukjDMP9X2sJqHnVj=KwwWx2yb8i+fcSamCj@mail.gmail.com>)

--- a/events.html
+++ b/events.html
@@ -84,6 +84,11 @@
       <li><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></li>
     </ul>
 
+    <div class="main_h2">
+    <h2>Disclaimer</h2>
+
+    <p>These documents shall be re-used with permission from the authors.</p>
+
   </div>
   </div>
   </div>
