Added a link to the files archive for the 2009 ENC poster in http://www.nmr-relax.com/events.html.
This follows a post at:
https://mail.gna.org/public/relax-devel/2011-01/msg00030.html
(Message-id: <AANLkTim7yukjDMP9X2sJqHnVj=KwwWx2yb8i+fcSamCj@mail.gmail.com>)

--- a/events.html
+++ b/events.html
@@ -76,6 +76,7 @@
     <ul>
       <li><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></li>
       <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></li>
+      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></li>
     </ul>
 
     <h3>2009 - 22nd MOOT (Ottawa, ON, Canada)</h3>
