Added links for my ICMRBS 2006 poster and abstract to http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -71,6 +71,14 @@
     <h2>Posters</h2>
 
   <div class="main_h3">
+    <h3>2006 - ICMRBS (Goettingen, Germany)</h3>
+
+    <ul>
+      <li><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></li>
+      <li><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></li>
+    </ul>
+
+
     <h3>2009 - 50th Experimental Nuclear Magnetic Resonance Conference (Asilomar, CA, USA)</h3>
 
     <ul>
