--- a/events.html
+++ b/events.html
@@ -71,12 +71,20 @@
     <h2>Posters</h2>
 
   <div class="main_h3">
-    <h3>2006 - ICMRBS (Goettingen, Germany)</h3>
+    <h3>2006</h3>
 
-    <ul>
-      <li><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></li>
-      <li><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></li>
-    </ul>
+<table cellpadding="5">
+  <tbody>
+    <tr>
+      <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
+      <td>XXII<sup>nd</sup> International Conference on Magnetic Resonance
+in Biological Systems (ICMRBS)</td>
+      <td>Goettingen, Germany.</td>
+      <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
+      <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
+    </tr>
+  </tbody>
+</table>
 
 
     <h3>2009 - 50th Experimental Nuclear Magnetic Resonance Conference (Asilomar, CA, USA)</h3>
