Improved the table layout at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -73,18 +73,20 @@
   <div class="main_h3">
     <h3>2006</h3>
 
-<table cellpadding="5">
-  <tbody>
-    <tr>
-      <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
-      <td>XXII<sup>nd</sup> International Conference on Magnetic Resonance
-in Biological Systems (ICMRBS)</td>
-      <td>Goettingen, Germany.</td>
-      <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
-      <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
-    </tr>
-  </tbody>
-</table>
+    <table cellpadding="5">
+      <tbody>
+        <tr>
+          <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
+          <td colspan="3">XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Goettingen, Germany.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><strong>Author:</strong> Edward d'Auvergne</td>
+          <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
+          <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
+        </tr>
+      </tbody>
+    </table>
 
 
     <h3>2009 - 50th Experimental Nuclear Magnetic Resonance Conference (Asilomar, CA, USA)</h3>
